# iqrah-backend

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  Cargo.toml  README.md  deny.toml  justfile  openapi.json
.sqlx/: query-08879214781bcf467bb6495f40432002f9f7d05c5de0cccc5f7eca44639ca862.json  query-252ef7a7cc83b6f73ffd8825f6641418fbca47823d7e3e8bddfe6304eb07104e.json  query-2710b1a3d3b5b1a4f3886ce8fc61cfc44df5103eb43a11c78a8475eeab19d6dd.json  query-2f13385c41601180c1160c4df094af744f862ad3d2f3c60b34b48a14fefad081.json  query-317cc07155da66f04ee42904edf96d28d03ba1c1961a5afc017f3b29609e85df.json  query-31e14dca2550bd47bf4b8d53b842f74c5f3db55de19d25e75fa0cb15b52a53ca.json  query-38488eef5af2fcd141d001c731c771d4c9c83d27cc7db0e8fe34beed274790cf.json  query-432fcaad2ea77cfe07a517deae2bae7e65d886b65bf644a97cbd60a2cdbdacd3.json  query-4a066dbf6173ea99081de49efcad248abdc870de599763aa0a31f979dd082652.json  query-50b54665ebc5461f9b1a1e3e124effdd715867e3b53fd6f4de0828de43344c2a.json  query-5539e879b08f1cce91ff3913b7242f0ac8c5f9edf2e0345089007579f9b128e9.json  query-59c129943d42ba943bb7433d0d481fc8d3938c6ce2f907a34c7703ede90cf286.json  query-59cb1267e3444cd112f8d2c1426960a02cc2c8eb1bd2fa8d94270705d3110afa.json  query-5a33490fc67706ce4d9afd4eda5f305695723e5fc19d5b7152db41fe2522ef6d.json  query-5c2feaea65d8d5b95bff194063d678b4cc75a7f5cbf630bde303d3c5206ba9cd.json  query-603f747c57edb4050409b66b5a44c812a07fb89dcf916383f1ce9daa31051a1a.json  query-638a8817aa7f929a5dfb79e3b653f93223380c149b3b4d41ba15a60f6082dcc7.json  query-63e766a78c31ca9733ae8213b1494834be5c2fe87a74c71c5e83496ed8661127.json  query-68b561a1cf0f83fa5e5e39efa5f3bc325ea860eb7e2b9b97509cb146ee323b97.json  query-6d714c6f093a3c13f6043643d66b06af9ee3656d01780c13fd588bf1459f9c9a.json  query-7643dfb201d0001b958dd39c9add297b359cc4936f17cf628969a2bbfb076d60.json  query-76bd346611cf0c1e99ad76d3e81ef2bf5eae7abede93fc8b5f8bef484661a6c6.json  query-7b5e51dd051c60b9c878109f4403dd0098661d434d81f3a5a73ad1761b05f4de.json  query-7ca38350aea80ab4410f5a0d2ed3fa7ab22340ba1e03da4a9d67cd32429ec4a7.json  query-7f061575e597ec00ad4aa0b31d37c17c179dfbf9113363ead1d4d5f0bda06d9f.json  query-80c7b67c281dc2226354dcb66644a37279016d8c6a4b52dea8ccd1da0fe05ac5.json  query-830cc225335d608b25c28c202adda3889f55640955d7a34fbbc02f097f55d670.json  query-898b8d5e238c868c4ba01dd47b65ce7a2cf8676166a5966dee40887d297de609.json  query-8a7edf36a8df38181c2fa14a1f2f63a1acb872096dc80c3ec52f313de09059f2.json  query-941028d56ee4b3e36bf6baf8e6c1664677424b0b809e4ca3cac5609c0a0d93e9.json  query-95e7fc2af7313227aafce4458d8cfcb26e8bbab36009b7cb5e9ff374274a7a37.json  query-9967396a68a6c4c1dadf2b63fba3bbf6446bce34573a06e0c6ed3b9ec07cb87e.json  query-9ded463a90a9b1a14d2b76427009dcf1c4cc331aa05181e39627faea2e3bbcfe.json  query-9f526eb98a2a2d3739b58c913b34de8d0ea6d3af0d317e0878969313ca324243.json  query-9ffb37c3efef027134c44f52c2ed0940a740f66113c13ada558928ca9911c3ce.json  query-a3a77b40244fbd20af529972e9229b100e7143103eb7c7c89dad23ffb42d5945.json  query-a8e0f00f03eece2faac132b3daa132b8641290484e52e24b7171d3e3b8ca7d1e.json  query-ab1374ae9838a03faa70b1d2a7e71f7533a55937e698a3d1c3b563725081f3f3.json  query-b2efdcb315cc525c4811629a9f3f0ff4a69d5201c5bd556eac97e6fe859d0751.json  (+18 more)
crates/api/: Cargo.toml
crates/api/src/: lib.rs  main.rs  openapi.rs
crates/api/src/assets/: mod.rs  pack_asset_store.rs
crates/api/src/auth/: jwt_verifier.rs  mod.rs
crates/api/src/cache/: pack_verification_cache.rs
crates/api/src/handlers/: admin_packs.rs  admin_releases.rs  auth.rs  mod.rs  packs.rs  releases.rs  sync.rs
crates/api/src/middleware/: auth.rs
crates/api/src/routes/: admin.rs  auth.rs  mod.rs  packs.rs  releases.rs  sync.rs
crates/api/tests/: admin_packs.rs  api_integration_tests.rs
crates/config/: Cargo.toml
crates/config/src/: lib.rs
crates/domain/: Cargo.toml
crates/domain/src/: auth.rs  errors.rs  lib.rs  newtypes.rs  release.rs  sync.rs
crates/storage/: Cargo.toml
crates/storage/src/: auth_repository.rs  error.rs  lib.rs  pack_repository.rs  release_repository.rs  sync_repository.rs
crates/storage/tests/: pack_manifest_repository_tests.rs  pack_user_repository_tests.rs  release_repository_tests.rs  sync_audit_tests.rs  sync_repository_tests.rs
(+5 files in other folders)
