[package]
name = "iqrah-backend-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "iqrah-server"
path = "src/main.rs"

[[bin]]
name = "generate_spec"
path = "src/bin/generate_spec.rs"

[dependencies]
axum = { workspace = true, features = ["multipart"] }
tokio = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tower_governor = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
validator = { workspace = true }
tokio-util = { version = "0.7", features = ["io"] }
jsonwebtoken = "9"
sha2 = "0.10"
dashmap = "6"
reqwest = { workspace = true }
async-trait = { workspace = true }
secrecy = { workspace = true }
utoipa = { version = "5.4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9", features = ["axum"], optional = true }

iqrah-backend-config = { path = "../config" }
iqrah-backend-domain = { path = "../domain" }
iqrah-backend-storage = { path = "../storage" }

[dev-dependencies]
tempfile = "3"
mockall = { workspace = true }
tokio-test = { workspace = true }
rstest = { workspace = true }
fake = { workspace = true }

[features]
postgres-tests = []
swagger-ui = ["dep:utoipa-swagger-ui"]
