[package]
name = "iqrah-backend-config"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
dotenvy = { workspace = true }
thiserror = { workspace = true }
secrecy = { workspace = true }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
rstest = { workspace = true }
fake = { workspace = true }
