[package]
name = "iqrah-backend-domain"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
validator = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
axum = { workspace = true }
sqlx = { workspace = true }
utoipa = { version = "5.4", features = ["uuid", "chrono"] }

[dev-dependencies]
mockall = { workspace = true }
tokio-test = { workspace = true }
rstest = { workspace = true }
fake = { workspace = true }
