[package]
name = "iqrah-backend-storage"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
iqrah-backend-domain = { path = "../domain" }

[dev-dependencies]
tokio = { workspace = true }
mockall = "0.13"

[features]
postgres-tests = []
