[package]
name = "iqrah-backend-storage"
version.workspace = true
edition.workspace = true

[dependencies]
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
serde_json = { workspace = true }
async-trait = { workspace = true }
iqrah-backend-domain = { path = "../domain" }

[dev-dependencies]
tokio = { workspace = true }
mockall = { workspace = true }
tokio-test = { workspace = true }
rstest = { workspace = true }
fake = { workspace = true }

[features]
postgres-tests = []
